Caption font size and tag image align fixed

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -361,7 +361,7 @@ Full-Width Styles
   position: absolute;
   width: 100px;
   height: 100px;
-  top: 53px;
+  top: 50px;
   left: 1px;
   pointer-events: none;
 }
@@ -404,7 +404,7 @@ Full-Width Styles
 }
 
 .card_caption {
-  font-size: 18px;
+  font-size: 16px;
   text-align: center;
   width: 200px !important;
 }
@@ -428,35 +428,6 @@ Full-Width Styles
 
 .card img {
   display: block;
-}
-
-.zip_download_link {
-  display: block;
-  float: right;
-  width: 90px;
-  height:70px;
-  text-indent: -5000px;
-  overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom left;
-}
-
-.tar_download_link {
-  display: block;
-  float: right;
-  width: 90px;
-  height:70px;
-  text-indent: -5000px;
-  overflow: hidden;
-  background: url(../images/sprite_download.png) no-repeat bottom right;
-  margin-left: 10px;
-}
-
-.zip_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top left;
-}
-
-.tar_download_link:hover {
-  background: url(../images/sprite_download.png) no-repeat top right;
 }
 
 #main_content_wrap {
